gccida/c2/dump_edge_info
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/dump_edge_info/src/cfg.c:1023:16: error: use of undeclared identifier 'off_6474F4'
fprintf( file, off_6474F4, ( unsigned int)v5->index); 
               ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/dump_edge_info/src/cfg.c:1053:17: error: use of undeclared identifier 'off_6474F4'
fprintf( file, &off_6474F4[1], ( unsigned int)v10); 
                ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/dump_edge_info/src/cfg.c:1055:8: error: use of undeclared identifier 'dump_edge_info_bitnames'
fputs( dump_edge_info_bitnames[v10], file); 
       ^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/dump_edge_info/src/obj/cfg.o] Error 1
